fix timeslot cutoff

--- a/sass/billiards/_layout.scss
+++ b/sass/billiards/_layout.scss
@@ -421,8 +421,8 @@
                     display: none;
                 }
                 & > li:nth-child(2){
-                    float: left;
-                    width: 66%;
+                /*  float: left;
+                    width: 66%;  */
                     margin-top: 0 !important;
                 }
                 & > li:last-child{
